<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/book_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:transitionName="@string/book_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/book_image"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/book_author_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_author_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_title"
            app:layout_constraintBottom_toTopOf="@id/book_publisher_label"/>

    <TextView
            android:id="@+id/book_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/book_author_label"
            app:layout_constraintEnd_toStartOf="@id/book_image"
            app:layout_constraintTop_toBottomOf="@+id/book_title"/>

    <TextView
            android:id="@+id/book_publisher_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_publisher_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_author"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/book_publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/book_publisher_label"
            app:layout_constraintEnd_toStartOf="@id/book_image"
            app:layout_constraintTop_toBottomOf="@id/book_author"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/book_image"
            android:contentDescription="@string/image_view_cd"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:theme="@style/AppTheme"
            android:transitionName="@string/book_image"
            app:layout_constraintStart_toEndOf="@id/book_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>