<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/book_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

        <ImageView
                android:id="@+id/book_detail_image"
                android:contentDescription="@string/image_view_cd"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:theme="@style/AppTheme"
                android:transitionName="@string/book_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_begin="156dp"
                android:orientation="vertical"/>

        <TextView
                android:id="@+id/book_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:transitionName="@string/book_title"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
                android:id="@+id/book_detail_scroll_view_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                android:fillViewport="true"
                android:scrollbarThumbVertical="@null"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_detail_title"
                app:layout_constraintBottom_toTopOf="@id/book_diver_line">

            <TextView
                    android:id="@+id/book_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_detail_title"
                    app:layout_constraintBottom_toTopOf="@id/book_diver_line"/>
        </ScrollView>

        <View
                android:id="@+id/book_diver_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/material_design_light_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_detail_image"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/book_sellers_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_diver_line"
                app:layout_constraintBottom_toBottomOf="parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>